--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  flutter_launcher_icons: ^0.7.2+1   
 
 dev_dependencies:
   flutter_test:
@@ -77,3 +78,8 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+flutter_icons:    
+  android: "launcher_icon"    
+  ios: true    
+  image_path: "assets/icon/icon.png"  
